--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -4,8 +4,8 @@
 Dependencies:
 - 'on': ['@all']
   'require':
-    'frameworks/extra-cmake-modules': '@stable'
-    'frameworks/kio': '@stable'
-    'frameworks/ki18n': '@stable'
-    'frameworks/kpackage': '@stable'
+    'frameworks/extra-cmake-modules': '@latest-kf6'
+    'frameworks/kio': '@latest-kf6'
+    'frameworks/ki18n': '@latest-kf6'
+    'frameworks/kpackage': '@latest-kf6'
     'network/kaccounts-integration': '@same'
