[nextcloud] Port HTTP usage away from KIO
KIO is just a wrapper around QNetworkAccessManager with some things we don't need.

We can simplify the code and use QNetworkAccessManager directly

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -9,6 +9,7 @@ Dependencies:
     'frameworks/ki18n': '@latest-kf6'
     'frameworks/kpackage': '@latest-kf6'
     'network/kaccounts-integration': '@same'
+    'third-party/qcoro': '@latest'
 
 Options:
   require-passing-tests-on: ['Linux', 'FreeBSD', 'Windows']
