--- a/services/disabled/identica-microblog.service.in
+++ b/services/disabled/identica-microblog.service.in
@@ -3,7 +3,7 @@
   <type>twitter-microblog</type>
   <!-- identi.ca microblog feed - Service name being displayed as a checkbox label to enable/disable this service
        Would be nice to use the localized name of this service if it exists/makes sense -->
-  <_name>identi.ca</_name>
+  <name>identi.ca</name>
   <icon>identica</icon>
   <provider>identica</provider>
   <translations>kaccounts-providers</translations>
