--- a/providers/disabled/twitter.provider.in
+++ b/providers/disabled/twitter.provider.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <provider id="twitter">
-  <_name>Twitter</_name>
-  <_description>Twitter</_description>
+  <name>Twitter</name>
+  <description>Twitter</description>
   <icon>im-twitter</icon>
   <translations>kaccounts-providers</translations>
   <domains>.*twitter\.com</domains>
