--- a/services/disabled/facebook-notifications.service.in
+++ b/services/disabled/facebook-notifications.service.in
@@ -3,7 +3,7 @@
   <type>facebook-notifications</type>
   <!-- "Notifications" on Facebook - Service name being displayed as a checkbox label to enable/disable this service
        Would be nice to use the localized name of this service if it exists/makes sense -->
-  <_name>Notifications</_name>
+  <name>Notifications</name>
   <icon>facebook-notifications</icon>
   <provider>facebook</provider>
   <translations>kaccounts-providers</translations>
