--- a/services/disabled/google-contacts.service.in
+++ b/services/disabled/google-contacts.service.in
@@ -3,7 +3,7 @@
   <type>google-contacts</type>
   <!-- Google's Contacts - Service name being displayed as a checkbox label to enable/disable this service
        Would be nice to use the localized name of this service if it exists/makes sense -->
-  <_name msgctxt="Google Contacts">Contacts</_name>
+  <name msgctxt="Google Contacts">Contacts</name>
   <icon>google-contacts</icon>
   <provider>google</provider>
   <translations>kaccounts-providers</translations>
