--- a/services/disabled/owncloud-calendar.service.in
+++ b/services/disabled/owncloud-calendar.service.in
@@ -3,7 +3,7 @@
   <type>dav-calendar</type>
   <!-- ownCloud's Calendar - Service name being displayed as a checkbox label to enable/disable this service
        Would be nice to use the localized name of this service if it exists/makes sense -->
-  <_name>Calendar</_name>
+  <name>Calendar</name>
   <icon>owncloud-calendar</icon>
   <provider>owncloud</provider>
   <translations>kaccounts-providers</translations>
