--- a/services/nextcloud-storage.service.in
+++ b/services/nextcloud-storage.service.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <service id="nextcloud-storage">
   <type>dav-storage</type>
-  <_name>Storage</_name>
+  <name>Storage</name>
   <icon>kaccounts-nextcloud</icon>
   <provider>nextcloud</provider>
   <translations>kaccounts-providers</translations>
