Google: stop requesting gdrive permission
Google blocked us from using this back in June because we weren't able
justify our API usage to their satisfaction. As such, the permission is
now blocked, and including it here prevents people from logging into
their Google accounts for any other purposes, making 25% of the
KAccounts KCM non-functional. Remove the gdrive permissions for now so
at least other Google things can work (at least in theory).

BUG: 480779
FIXED-IN: 24.12.2

--- a/providers/google.provider.in
+++ b/providers/google.provider.in
@@ -2,7 +2,7 @@
 <provider id="google">
   <name>Google</name>
   <!-- Tooltip text appearing over the button to create this type of account -->
-  <description>Includes GMail, Google Drive and YouTube</description>
+  <description>Includes GMail and YouTube</description>
   <icon>im-google</icon>
   <translations>kaccounts-providers</translations>
   <domains>.*google\.com</domains>
@@ -26,7 +26,6 @@
               'https://www.googleapis.com/auth/calendar',
               'https://www.googleapis.com/auth/tasks',
               'https://www.google.com/m8/feeds/',
-              'https://www.googleapis.com/auth/drive',
               'https://www.googleapis.com/auth/youtube.upload'
           ]</setting>
           <setting name="AllowedSchemes" type="as">['https']</setting>
